fixed header text centering when words don't have space to wrap properly

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@ p {
 	text-align: center;
 	text-shadow: 0.075em 0.075em 0em blue;
 
-	width: 95%;
+	min-width: 95%;
 }
 
 #splash video {
@@ -159,7 +159,7 @@ p {
 	text-align: center;
 
 	position: absolute;
-	width: 100%;
+	min-width: 100%; /* using min-width rather than width keeps text centered if it doesn't have space to word-wrap. */
 
 	left: 50%;
 	top: 50%;
